# taylor_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ekf.yaml  my_controllers.yaml  taylor_amcl_config_file.yaml  taylor_rviz2_config.rviz
config/env-hooks/: taylor_robot.sh.in
description/: ros2_control.xacro  taylor.lidar.xacro  taylor.robot.core.xacro  taylor.robot.urdf.xacro  taylor_system.urdf.xacro
description/gazebo/: taylor.gazebo.xacro
env-hooks/: taylor_robot.sh.in
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab_usig_models/: laboratorio_2  porta.stl
lab_usig_models/laboratótio_de_usinagem_modelo/: model.config  model.sdf
lab_usig_models/maquina_corte/: model.config
lab_usig_models/mesa_de_trabalho/: model.config  model.sdf
lab_usig_world/: lab_5
lab_usig_world/bancada/: model.sdf
lab_usig_world/maquina_usinagem/: model.config
lab_usig_world/retifica/: model.config  model.sdf
lab_usig_world/torno_mecanico/: model.config
lab_usig_world_description/: CMakeLists.txt  package.xml
lab_usig_world_description/env-hooks/: lab_usig_world_description.sh.in
lab_usig_world_description/models/: laboratorio  laboratorio_3  teste
lab_usig_world_description/worlds/: lab  lab_1  lab_3  (+16 more)
launch/: cool_taylor.txt  launch.sh  localization_server.launch.py  nav2.launch.py  nav2_slam.launch.py  nav2_taylor_robot.launch.py  ros2_control.launch.py  rplidar.launch.py  taylor.launch.py  taylor_robot.launch.py  taylor_sim.launch.py  test.launch.py
log/: latest_build
meshes/: left_wheel.STL  lidar.STL
nodes/: package.xml  setup.cfg  setup.py
ros2_mapping/: CMakeLists.txt
rviz2/: taylor_rviz2_config.rviz
taylor_robot/: CMakeLists.txt  package.xml
taylor_robot_description/: CMakeLists.txt  package.xml
urdf/: taylor.robot.urdf.xacro
(+162 files in other folders)
